# chaturai

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .template.env  404.html  Caddyfile  Dockerfile  Dockerfile.api  Dockerfile.scraper  Makefile  README.md  alembic.ini  contact_us.html  contributing.html  docker-compose.dev.yml  docker-compose.scrape.yml  docker-compose.testing.yml  docker-compose.yml  example_details_response.json  example_list_response.json  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  roadmap.html  sitemap.xml  startup.sh  usage.html
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docs.yml
alembic/: env.py
backend/: .dockerignore  .gitignore  .pylintrc  .template.env  Dockerfile.api  Dockerfile.scraper  Makefile  alembic.ini  gunicorn_hooks_config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 29480d9f3e71_add_timezone.py  2d58750c03da_add_processed_status_column.py  39bf69aadd68_initial_migration.py
backend/notebooks/: README.md  eda_historical_contracts_data.py  eda_opportunities_db.py
backend/src/: settings.py
backend/src/api/: app.py  auth.py
backend/src/chaturai/: __init__.py  config.py  gunicorn_hooks.py  prometheus_middleware.py
backend/src/chaturai/admin/: __init__.py  routers.py
backend/src/chaturai/auth/: utils.py
backend/src/chaturai/chatur/: __init__.py  routers.py  schemas.py  utils.py
backend/src/chaturai/db/: opportunity.py  utils.py
backend/src/chaturai/entries/: main.py  scrape_opportunities.py
backend/src/chaturai/graphs/: chatur.py  login.py  profile.py  registration.py  utils.py
backend/src/chaturai/metrics/: logfire_metrics.py
backend/src/chaturai/prompts/: chat.py  chatur.py  keyphrase_extraction.py
backend/src/chaturai/recommendation/: __init__.py  base.py  basic_recommendation.py  routers.py  schemas.py  utils.py
backend/src/chaturai/scrapers/: opportunities_scraper.py
backend/src/chaturai/utils/: browser.py  chat.py  embeddings.py  general.py  keyphrase_extraction.py  litellm_.py  logging_.py
backend/src/models/: base.py  opportunity.py
backend/src/naukriwaala/: __init__.py  config.py  gunicorn_hooks.py  metrics.py  schemas.py
backend/src/naukriwaala/admin/: __init__.py  routers.py
backend/src/naukriwaala/auth/: utils.py
backend/src/naukriwaala/db/: opportunity.py  utils.py
backend/src/naukriwaala/ekyc/: __init__.py  routers.py  schemas.py  utils.py
backend/src/naukriwaala/entries/: main.py  scrape_opportunities.py
backend/src/naukriwaala/graphs/: ekyc.py  login.py  naukri.py  registration.py  utils.py
backend/src/naukriwaala/metrics/: logfire_metrics.py
backend/src/naukriwaala/naukri/: __init__.py  routers.py  schemas.py  utils.py
backend/src/naukriwaala/prompts/: base.py  chat.py  ekyc.py  keyphrase_extraction.py  naukri.py
backend/src/naukriwaala/recommendation/: __init__.py  base.py  basic_recommendation.py  routers.py  schemas.py
backend/src/naukriwaala/scrapers/: opportunities_scraper.py
backend/src/naukriwaala/utils/: chat.py  embeddings.py  general.py  keyphrase_extraction.py  litellm_.py  logging_.py
backend/src/recommendation/: engine.py  example.py
backend/src/registration/: schema.py  tasks.py
backend/src/scrapers/: opportunities_scraper.py
blog/: index.html  our-mission.html
blog/2025/05/07/: managing-agentic-flows-with-pydantic-graph.html
blog/archive/: 2025.html
blog/category/: agentic-flows.html
cicd/deployment/docker-compose/: .dockerignore  .template.env  Caddyfile  docker-compose.dev.yml  docker-compose.scrape.yml  docker-compose.testing.yml  docker-compose.yml
cicd/litellm/: .template.env  litellm_config.yaml
cicd/requirements/: requirements.txt  requirements_dev.txt
components/: index.html
components/apprenticeship-recommendation/: index.html
components/automated-registration/: index.html
components/career-coaching/: index.html
deployment/: quick-setup.html
development/: index.html  local-setup.html
docs/: CNAME  contact_us.md  contributing.md  index.md  roadmap.md
docs/blog/: .authors.yml  index.md  our-mission.md
docs/blog/posts/: graph-flows-with-agents.md  managing-agentic-flows-with-pydantic-graph.md
docs/components/: index.md
docs/components/apprenticeship-recommendation/: index.md
docs/components/automated-registration/: index.md
docs/components/career-coaching/: index.md
docs/deployment/: quick-setup.md
docs/development/: contributing.md  index.md  local-setup.md  local_setup.md
docs/integrations/: index.md
examples/: basic_recommendation.py
examples/notebooks/: eda_historical_contracts_data.py  eda_opportunities_db.py
frontend/: .gitignore  .prettierrc  .stylelintrc.js  .template.env  Makefile  eslint.config.mjs  jest.config.ts  package.json  tsconfig.json
frontend/src/: tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgeGroupSelector.tsx  ChatWindow.tsx  Footer.tsx  ModeSelector.tsx  NavBar.tsx  PastSessions.tsx  ThemeSelect.tsx
integrations/: index.html
integrations/chat_managers/turn.io/: turn.html
scripts/shell/: create_directories.sh  set_env_vars.sh
search/: search_index.json
src/: settings.py
src/api/: app.py  auth.py  config.py
src/models/: base.py  opportunity.py
src/recommendation/: engine.py  example.py
src/recommendation/implementations/: basic_engine.py
src/scrapers/: opportunities_scraper.py  run_scheduled.py
stylesheets/: extra.css
