[project]
name = "naukriwaala"
description = "Your guide for your apprenticeship journey (National Apprenticeship Promotion Scheme)"
dynamic = ['readme', 'version', 'dependencies', 'requires-python']
authors = [
    { name = "Suzin You", email = "7042047+suzinyou@users.noreply.github.com" },
]

[tool.poetry]
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.34"
alembic = "^1.13.1"
pydantic = "^2.6.3"
fastapi = "^0.115.12"
gunicorn = "^23.0.0"
schedule = "^1.2.1"
prometheus-client = "^0.21.1"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^4.2.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
